@@ -1,0 +1,19 @@
+<?php
+namespace dhope0000\LXDClient\Tools\Profiles;
+
+use dhope0000\LXDClient\Model\Client\LxdClient;
+use dhope0000\LXDClient\Tools\Hosts\GetClustersAndStandaloneHosts;
+
+class GetProfile
+{
+    public function __construct(LxdClient $lxdClient)
+    {
+        $this->lxdClient = $lxdClient;
+    }
+
+    public function get(int $hostId, string $profile)
+    {
+        $client = $this->lxdClient->getANewClient($hostId);
+        return $client->profiles->info($profile);
+    }
+}
