@@ -15,6 +15,7 @@ Added
 Changed
     Indicate cluster groups & standalone hosts on dashboard (#150)
     Updated the profile view
+    Load profile on click instead of passing around an array containing profile data
 
 Fixed
     Cant create a container with no devices (#158)
